@@ -296,6 +296,14 @@ HKCU\Software\TortoiseSVN\OwnerdrawnMenus
 				</blockquote>
 			</para>
 		</sect2>
+		<sect2 id="tsvn-faq-installation-10">
+		<title>Wo ist die Rechtschreibkorrektur?</title>
+		<para>
+		Wenn Sie eine Rechtschreibkorrektur für die Eingabe der Log Meldungen
+		verwenden wollen, folgen Sie bitte den Installations-Anweisungen hier:
+		<xref linkend="tsvn-ch-1-sect-4" />
+		</para>
+		</sect2>
 	</sect1>
 	<!-- ================================================================= -->
 	<!-- ======================== SECTION 2 ============================== -->
