@@ -23,6 +23,8 @@
        files before a commit. (Stefan)
 - ADD: The "Resolve" command checks first if there are
        still some conflict markers in the file. (Stefan)
+- ADD: All edit boxes where a log message can be entered
+       support now spell checking and a thesaurus. (Stefan)
 - BUG: TortoiseMerge skipped diffs of one line with the
        "Next Diff" or "Previous Diff" commands. (Stefan)
 
